# graphql-ws-next

./: .gitignore  .isort.cfg  .pylintrc  .travis.yml  LICENSE  README.rst  pyproject.toml
demo/: aiohttp_server.py  graphiql_template.py
graphql_ws/: __init__.py  abstract.py  aiohttp.py  protocol.py  server.py  testing.py
tests/: common.py  conftest.py  test_abstract.py  test_aiohttp.py  test_gql.py  test_integration.py  test_protocol.py  test_server.py  test_testing.py
